--- a/src/main/resources/.env
+++ b/src/main/resources/.env
@@ -1,2 +1,2 @@
-DB_URL=admin:IYtkNnoV8axchSVm@preercorecloudv3devclus.ac0wy6v.mongodb.net/peercore
+DB_URL=admin:IYtkNnoV8axchSVm@preercorecloudv3devclus.ac0wy6v.mongodb.net/competitor-activity
 SERVER_PORT=8081
